1998-02-02  Mark Galassi  <rosalia@cygnus.com>

	* Makefile.am (include_HEADERS): added gsl_specfunc.h so it gets
	into the distribution.
	(INCLUDES): added -I$(top_srcdir) so that bessel.c can find
	gsl_math.h