@@ -187,7 +187,7 @@ double gsl_sf_bessel_I0_scaled(const double x)
   double y;
   int status = gsl_sf_bessel_I0_scaled_impl(x, &y);
   if(status != GSL_SUCCESS) {
-    GSL_WARNING("gsl_sf_bessel_I0_scaled");
+    GSL_WARNING("gsl_sf_bessel_I0_scaled", status);
   }
   return y;
 }
@@ -198,7 +198,7 @@ double gsl_sf_bessel_I0(const double x)
   double y;
   int status = gsl_sf_bessel_I0_impl(x, &y);
   if(status != GSL_SUCCESS) {
-    GSL_WARNING("gsl_sf_bessel_I0");
+    GSL_WARNING("gsl_sf_bessel_I0", status);
   }
   return y;
 }
