@@ -213,7 +213,7 @@ double gsl_sf_bessel_I1_scaled(const double x)
   double y;
   int status = gsl_sf_bessel_I1_scaled_impl(x, &y);
   if(status != GSL_SUCCESS) {
-    GSL_WARNING("gsl_sf_bessel_I1_scaled");
+    GSL_WARNING("gsl_sf_bessel_I1_scaled", status);
   }
   return y;
 }
@@ -223,7 +223,7 @@ double gsl_sf_bessel_I1(const double x)
   double y;
   int status = gsl_sf_bessel_I1_impl(x, &y);
   if(status != GSL_SUCCESS) {
-    GSL_WARNING("gsl_sf_bessel_I1");
+    GSL_WARNING("gsl_sf_bessel_I1", status);
   }
   return y;
 }
